# cpp_tasks

./: a.out  basics  basics.cpp  classes  classes-basics  classes-basics.cpp  classes-init-list  classes-init-list.cpp  classes-memalloc  classes-memalloc.cpp  classes.cpp  currency  currency.cpp  exceptions  exceptions.cpp  functions  functions.cpp  generic-vector  generic-vector.cpp  inheritance  inheritance.cpp  linked-list  linked-list.cpp  matrix-2d  matrix-2d.cpp  multiple-inheritance  multiple-inheritance.cpp  op-overloading  op-overloading.cpp  string-builder  string-builder.cpp  templates  templates.cpp  threading-bankaccount  threading-bankaccount.cpp  threading-concurrency  threading-concurrency.cpp  threading-exceptions  threading-exceptions.cpp  two-d-array  (+3 more)
compilation/: CMakeLists.txt  hello.cpp  main.cpp
compilation/build-aarm64/: CMakeCache.txt  Makefile  cmake_install.cmake  testapp
compilation/build-win-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
compilation/build-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  main
compilation/linux_arm/: main_unix_arm64
compilation/linux_x86_64/: main
file-mem/: file-class  file-class.cpp  iofstream  iofstream.cpp  json-data.txt  mem-file-sys  mem-file-sys.cpp
hashing-encryption/: aes_256.iv  aes_256.key  asymm-enc  asymm-enc.cpp  hashing  hashing.cpp  plainText.txt  plainText.txt.enc  plainText.txt.rsa.enc  plainText.txt.sig  private.pem  public.pem  symm-enc  symm-enc.cpp
hashing-encryption/cypto_tool/linux_x84_pre_realease/: README.markdown  aes.iv  aes.key  run.sh  run.txt  secret.enc
hashing-encryption/cypto_tool/linux_x84_pre_realease/source_code/: crypto_tool.cpp
header_file/: main  main.cpp  math_lib.cpp  math_lib.h
mathlib/: main  main.cpp  mathlib.cpp  mathlib.hpp
online_exams_api/: CMakeLists.txt  main  main.cc  main1.cc
online_exams_api/controllers/: PupilsController.cpp  PupilsController.h
online_exams_api/models/: DbInterface.h  Pupils.cpp.dis
online_exams_api/test/: CMakeLists.txt
ramfs/: ramfs  ramfs.cpp  ramfs.hpp
xml-json-converter/: CMakeLists.txt  main.cc  toolchain-aarch64.cmake
xml-json-converter/abel-benard-mwendwa-linux-x86_64-xml_json-converter/: run.sh  setup.txt
xml-json-converter/controllers/: xmlJsonConverterController.cc  xmlJsonConverterController.h
xml-json-converter/test/: CMakeLists.txt
